--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -3,17 +3,19 @@
 .nav {
     width: 100%;
     max-width: 100%;
+    height: auto;
     background-color: color.$twoColor;
     position: sticky;
     top: 0;
+    z-index: 1;
     &__links {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin: 0 40px;
+        margin: 0 50px;
     }
     &__logo img {
-        width: 150px;
+        width: 90px;
         padding: 15px;
         display: block;
         object-fit: cover;
@@ -21,8 +23,11 @@
     &__link a {
         color: color.$fourColor;
         text-decoration: none;
-        padding: 20px;
-        font-size: 1.5rem;
+        padding: 5px 10px;
+        font-size: 2rem;
+        box-shadow: 2px 2px 10px color.$fiveColor;
+        margin: 20px;
+        border-radius: 5px;
     }
     &__link a:hover {
         color: color.$fiveColor;
@@ -35,8 +40,13 @@
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 768px) {
     .nav {
+        width: 100%;
+        max-width: 768px;
+        position: sticky;
+        top: 0;
+        z-index: 1;
         &__links {
             width: 90%;
             margin: 0 auto;
@@ -64,7 +74,7 @@
             width: 100px;
         }
         &__link a {
-            font-size: 1.2rem;
+            font-size: 3rem;
         }
         &__icon {
             display: block;
@@ -73,9 +83,20 @@
         &__icon--img {
             display: block;
             width: 35px;
+            margin-right: 20px;
         }
         :checked + * {
             transform: translate(0);
         }
     }
 }
+
+/* @media (max-width: 550px){
+    .nav{
+        width: 100%;
+        max-width: 100%;
+        &__link a {
+        font-size: 1.5rem;
+    }
+}
+} */
