--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -8,6 +8,11 @@
     position: sticky;
     top: 0;
     z-index: 1;
+    &__logo{
+        display: flex;
+        align-items: center;
+        color: color.$fourColor;
+    }
     &__links {
         display: flex;
         justify-content: space-between;
@@ -84,6 +89,7 @@
             display: block;
             width: 35px;
             margin-right: 20px;
+            color: color.$fourColor;
         }
         :checked + * {
             transform: translate(0);
