--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,8 @@
 @use 'color';
 @use 'nav';
 @use 'header';
+@use 'oneSection';
+@use 'container';
 
 /* @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap'); */
 /* @import url('https://fonts.googleapis.com/css2?family=Gwendolyn:wght@400;700&display=swap'); */
