--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,6 +4,7 @@
     width: 100%;
     max-width: 100%;
     height: 100vh;
+    margin-top: 100px;
     background-image: linear-gradient(to right, #cb997e78, #b7b7a486), url(/assets/header.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -30,7 +31,7 @@
 @media (max-width: 768px) {
     .header {
         &__title{
-            font-size: 3.5rem;
+            font-size: 3rem;
         }
     }
 }
