--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -5,7 +5,7 @@
     max-width: 100%;
     height: auto;
     background-color: color.$twoColor;
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 1;
     &__logo{
@@ -31,7 +31,7 @@
         padding: 5px 10px;
         font-size: 2rem;
         box-shadow: 2px 2px 10px color.$fiveColor;
-        margin: 20px;
+        margin: 8px;
         border-radius: 5px;
     }
     &__link a:hover {
@@ -49,7 +49,7 @@
     .nav {
         width: 100%;
         max-width: 768px;
-        position: sticky;
+        position: fixed;
         top: 0;
         z-index: 1;
         &__links {
@@ -65,7 +65,7 @@
             top: 80px;
             right: 0;
             background: color.$twoColor;
-            height: 100%;
+            height: 80%;
             width: 60%;
             max-width: 400px;
             display: flex;
@@ -79,7 +79,8 @@
             width: 100px;
         }
         &__link a {
-            font-size: 3rem;
+            font-size: 2.2rem;
+            text-align: center;
         }
         &__icon {
             display: block;
