--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,7 @@
 @use 'container';
 @use 'oneSection';
 @use 'twoSection';
+@use 'footer';
 
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
