--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,12 @@
   gap: 20px;
   justify-items: center;
 }
+.two-section__video {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px 0;
+}
 .two-section__video video {
   width: 450px;
   height: 300px;
