--- a/sass/_twoSection.scss
+++ b/sass/_twoSection.scss
@@ -5,7 +5,7 @@
     &__title{
         font-size: 4rem;
         font-weight: 400;
-        margin: 40px 0;
+        margin: 140px 0 40px 0;
         -webkit-text-stroke: 2px color.$sixColor;
         color: color.$twoColor;
         text-decoration: underline;
@@ -13,7 +13,7 @@
     }
     &__grid{
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         gap: 20px;
         justify-items: center;
     }
@@ -26,8 +26,8 @@
     }
 
     &__video video{
-        width: 450px;
-        height: 300px;
+        width: 380px;
+        height: 250px;
         object-fit: cover;
         box-shadow: 0 0 6px rgba(0, 0, 0, .8);
         margin: 0 auto;
@@ -59,6 +59,11 @@
         cursor: pointer;
         box-shadow: 0 0 20px (rgba(0, 0, 0, .2));
     }
+
+    &__cta a:hover{
+        background-color: color.$oneColor;
+        color: color.$fiveColor;
+    }
 }
 
 
@@ -67,6 +72,9 @@
         &__video video{
             width: 280px;
             height: 180px;
+        }
+        &__grid{
+            grid-template-columns: repeat(2, 1fr);
         }
     }
 }
