--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,7 +17,7 @@
 body {
     font-family: 'Lobster', cursive;
     background: color.$fourColor;
-    height: 1200px;
+    /* height: 1200px; */
     width: 100%;
     max-width: 100%;
 }
