--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,7 @@
 @use 'oneSection';
 @use 'twoSection';
 @use 'footer';
+@use 'arrow';
 
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
