--- a/sass/_arrow.scss
+++ b/sass/_arrow.scss
@@ -1,13 +1,14 @@
 @use 'color';
 
 .arrow{
-    background: color.$threeColor;
+    /* background: color.$threeColor; */
     padding: 10px;
-    font-size: 40px;
+    font-size: 50px;
     position: fixed;
     border-radius: 6px;
-    bottom: 20px;
-    right: 20px;
+    bottom: 70px;
+    right: 40px;
+    align-items: center;
 }
 
 /* Custom Scroll Bar CSS */
@@ -26,4 +27,17 @@
 
 ::-webkit-scrollbar-thumb:hover{
     background: color.$twoColor;
+}
+
+@media (max-width: 768px){
+    
+    .arrow{
+        right: 20px;
+}
+}
+@media (max-width: 550px){
+    
+    .arrow{
+        right: 5px;
+}
 }
